--- a/index.html
+++ b/index.html
@@ -4,107 +4,8 @@
   <meta charset="UTF-8" />
   <title>Éditeur HTML - Mode Sombre</title>
   <style>
-    /* (idem style que précédemment) */
-    * {
-      box-sizing: border-box;
-    }
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    body {
-      display: flex;
-      flex-direction: row;
-      height: 100vh;
-      transition: background 0.3s, color 0.3s;
-    }
-    #editor {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      transition: background 0.3s;
-    }
-    textarea {
-      flex: 1;
-      font-family: monospace;
-      font-size: 15px;
-      padding: 15px;
-      border-radius: 10px;
-      resize: none;
-      outline: none;
-      margin-bottom: 15px;
-      border: 1px solid transparent;
-      transition: background 0.3s, color 0.3s, border 0.3s;
-    }
-    .btn-group {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    button {
-      flex: 1;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
-    /* Thèmes */
-    body.light {
-      background: linear-gradient(135deg, #4ea8de, #7c3aed);
-      color: white;
-    }
-    body.light #editor {
-      background: transparent;
-    }
-    body.light textarea {
-      background-color: rgba(255, 255, 255, 0.1);
-      color: white;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-    body.light button {
-      background: linear-gradient(135deg, #4ea8de, #7c3aed);
-      color: white;
-    }
-    body.dark {
-      background: #121212;
-      color: #e0e0e0;
-    }
-    body.dark #editor {
-      background: #1e1e1e;
-    }
-    body.dark textarea {
-      background-color: #2d2d2d;
-      color: #e0e0e0;
-      border: 1px solid #444;
-    }
-    body.dark button {
-      background: linear-gradient(135deg, #333, #555);
-      color: #fff;
-    }
-    #themeToggle {
-      flex: 1;
-      background: orange;
-      color: black;
-    }
-    @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
-      #editor {
-        width: 100%;
-        height: 100vh;
-      }
-    }
+    /* (garde ton CSS d’origine, inchangé) */
+    /* ... */
   </style>
 </head>
 <body class="light">
@@ -117,15 +18,25 @@
       <button onclick="downloadCode()">⬇ Télécharger</button>
       <button onclick="importFile()">⬆ Importer</button>
       <button onclick="copyCode()">📋 Copier</button>
-      <button onclick="openPreview()">👁️ Preview</button>
       <button id="themeToggle" onclick="toggleTheme()">🌙 Mode sombre</button>
+      <button onclick="goToPreview()">👁️ Voir la prévisualisation</button>
       <input type="file" id="fileInput" accept=".html" style="display:none" />
     </div>
   </div>
 
+  <div id="previewContainer" style="display:none;">
+    <iframe id="preview"></iframe>
+  </div>
+
   <script>
     function runCode() {
-      // Optionnel, pour exécuter dans iframe interne si besoin (non utilisé ici)
+      const html = document.getElementById("htmlInput").value;
+      const fullHtml = `<!DOCTYPE html>
+<html>
+<head><meta charset="UTF-8"><title>Prévisualisation</title></head>
+<body>${html}</body></html>`;
+      const previewFrame = document.getElementById("preview");
+      previewFrame.srcdoc = fullHtml;
     }
 
     function downloadCode() {
@@ -155,6 +66,7 @@
         const reader = new FileReader();
         reader.onload = (e) => {
           document.getElementById('htmlInput').value = e.target.result;
+          runCode();
         };
         reader.readAsText(file);
       };
@@ -180,17 +92,24 @@
       }
     }
 
-    function openPreview() {
-      const html = document.getElementById("htmlInput").value;
-      const encoded = btoa(unescape(encodeURIComponent(html)));
-      const url = `index2.html?code=${encoded}`;
-      window.open(url, '_blank');
+    // Fonction qui génère un ID unique simple
+    function generateId() {
+      return 'id-' + Math.random().toString(36).substr(2, 9);
     }
 
-    window.onload = () => {
-      // Optionnel : charger un exemple
-      document.getElementById("htmlInput").value = '<h1>Bienvenue !</h1><p>Éditez ici votre HTML.</p>';
-    };
+    // Sauvegarde dans localStorage + ouvre preview avec id
+    function goToPreview() {
+      const code = document.getElementById('htmlInput').value;
+      const id = generateId();
+      try {
+        localStorage.setItem('previewCode_' + id, code);
+        window.open(`index2.html?codeId=${id}`, '_blank');
+      } catch(e) {
+        alert("Erreur lors de la sauvegarde du code dans localStorage.");
+      }
+    }
+
+    window.onload = runCode;
   </script>
 
 </body>
