--- a/index.html
+++ b/index.html
@@ -2,115 +2,29 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Éditeur HTML - Mode Sombre</title>
-  <style>
-    /* (garde ton CSS d’origine, inchangé) */
-    /* ... */
-  </style>
+  <title>Éditeur HTML - GitHub Pages</title>
 </head>
-<body class="light">
-
-  <div id="editor">
-    <textarea id="htmlInput"></textarea>
-
-    <div class="btn-group">
-      <button onclick="runCode()">▶ Exécuter</button>
-      <button onclick="downloadCode()">⬇ Télécharger</button>
-      <button onclick="importFile()">⬆ Importer</button>
-      <button onclick="copyCode()">📋 Copier</button>
-      <button id="themeToggle" onclick="toggleTheme()">🌙 Mode sombre</button>
-      <button onclick="goToPreview()">👁️ Voir la prévisualisation</button>
-      <input type="file" id="fileInput" accept=".html" style="display:none" />
-    </div>
-  </div>
-
-  <div id="previewContainer" style="display:none;">
-    <iframe id="preview"></iframe>
-  </div>
+<body>
+  <textarea id="htmlInput" style="width:100%; height:70vh;"></textarea><br>
+  <button onclick="goToPreview()">Voir la prévisualisation</button>
 
   <script>
-    function runCode() {
-      const html = document.getElementById("htmlInput").value;
-      const fullHtml = `<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"><title>Prévisualisation</title></head>
-<body>${html}</body></html>`;
-      const previewFrame = document.getElementById("preview");
-      previewFrame.srcdoc = fullHtml;
-    }
-
-    function downloadCode() {
-      const html = document.getElementById("htmlInput").value;
-      const fullHtml = `<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"><title>Fichier Téléchargé</title></head>
-<body>${html}</body></html>`;
-      const blob = new Blob([fullHtml], { type: 'text/html' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'mon_fichier.html';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-      URL.revokeObjectURL(url);
-    }
-
-    function importFile() {
-      const fileInput = document.getElementById('fileInput');
-      fileInput.value = null;
-      fileInput.click();
-      fileInput.onchange = () => {
-        const file = fileInput.files[0];
-        if (!file) return;
-        const reader = new FileReader();
-        reader.onload = (e) => {
-          document.getElementById('htmlInput').value = e.target.result;
-          runCode();
-        };
-        reader.readAsText(file);
-      };
-    }
-
-    function copyCode() {
-      const textarea = document.getElementById('htmlInput');
-      textarea.select();
-      textarea.setSelectionRange(0, 99999);
-      document.execCommand("copy");
-      alert("Code copié dans le presse-papiers !");
-    }
-
-    function toggleTheme() {
-      const body = document.body;
-      const toggleBtn = document.getElementById('themeToggle');
-      body.classList.toggle('dark');
-      body.classList.toggle('light');
-      if (body.classList.contains('dark')) {
-        toggleBtn.textContent = '☀️ Mode clair';
-      } else {
-        toggleBtn.textContent = '🌙 Mode sombre';
-      }
-    }
-
-    // Fonction qui génère un ID unique simple
     function generateId() {
       return 'id-' + Math.random().toString(36).substr(2, 9);
     }
 
-    // Sauvegarde dans localStorage + ouvre preview avec id
     function goToPreview() {
       const code = document.getElementById('htmlInput').value;
       const id = generateId();
+
       try {
         localStorage.setItem('previewCode_' + id, code);
-        window.open(`index2.html?codeId=${id}`, '_blank');
-      } catch(e) {
-        alert("Erreur lors de la sauvegarde du code dans localStorage.");
+        // Redirige vers preview.html avec l'id en paramètre
+        window.location.href = 'preview.html?codeId=' + id;
+      } catch (e) {
+        alert('Erreur stockage local : ' + e);
       }
     }
-
-    window.onload = runCode;
   </script>
-
 </body>
 </html>
